--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap')
 :root{
-    --cor-de-fundo: #556B2F;
-    --amarelo: #FFFF00;
-    --branco: #F0F8FF;
-    --botao-ativo: #8FBC8F;
-    --botao-inativo: rgba(143,188,143, 0.5);
-    --texto-fundo: rgba(107,142,35, 0.3);
+    --cor-de-fundo: #1E1E1E;
+    --verde: #6FFF57;
+    --branco: #FFFFFF;
+    --botao-ativo: #3A375E;
+    --botao-inativo: rgba(58, 55, 94, 0.5);
+    --texto-fundo: rgba(58, 55, 94, 0.3);
 }
+
 
 body{
     background-color: var(--cor-de-fundo);
@@ -31,12 +32,12 @@ body{
     font-size: 32px;
 }
 
-.titulo-principal span{
-    color: var(--amarelo);
+.titulo-principal span {
+    color: var(--verde);
 }
 
-.botao{
-    font-family: 'Jacquarda Bastarda', sans-serif;
+.botao {
+    font-family: "Crakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -46,8 +47,11 @@ body{
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
-    border-left: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
 }
+
 
 .botao:first-child{
     border-radius: 40px 40px 0 0;
