--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --cor-de-fundo: #1E1E1E;
     --verde: #58d4f3;
     --branco: #5b8ff0;
-    --botao-ativo: #82ffc5;
+    --botao-ativo: #00ffaa;
     --botao-inativo: rgba(58, 55, 94, 0.5);
     --texto-fundo: rgba(58, 55, 94, 0.3);
 }
@@ -45,9 +45,9 @@ body{
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid #82ffc5;
-    border-left: 2px solid #82ffc5;
-    border-right: 2px solid #82ffc5;
+    border-bottom: 4px solid #00ffaa;
+    border-left: 2px solid #00ffaa;
+    border-right: 2px solid #00ffaa;
     border-top: none;
 }
 
@@ -61,8 +61,8 @@ body{
 }
 
 .ativo{
-    background-color: #82ffc5;
-    border-bottom: 4px solid #82ffc5;
+    background-color: #00ffaa;
+    border-bottom: 4px solid #00ffaa;
 }
 
 @media screen and (min-widht: 768px) {
