--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 
 body{
-    background-color:  #1E1E1E;
+    background-color:  #0a0038;
     color: #ff008c;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;}
 
