--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Jacquarda+Bastarda+9&display=swap');
 :root{
     --cor-de-fundo: #1E1E1E;
     --verde: #58d4f3;
@@ -22,7 +22,6 @@ body{
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
-
 }
 
 .titulo-principal{
