--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgba(58, 55, 94, 0.5);
     color:  #ff008c;
-    display: table-column-group;
+    display: center;
     justify-content: center;
     padding: 1em;
     font-size: 18px;
