--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid #00ffea;
+    border-bottom: 4px solid #002fff88;
     border-left: 2px solid #00ffaa;
     border-right: 2px solid #00ffaa;
     border-top: none;
