--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ body{
 }
 
 .ativo{
-    background-color: #00ffaa;
-    border-bottom: 4px solid #01146888
+    background-color: #01146888
+    border-bottom: 4px solid #00ffaa;
 }
 
 @media screen and (min-widht: 768px) {
