--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 .botoes {
     display: block;
 }
+
 .botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
@@ -70,7 +71,9 @@ body {
     border-radius: 0 0 40px 40px;
 }
 
-
+.abas-conteudo.ativo{
+    display: block;
+}
 
 .aba-conteudo{
     display: none;
