--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body {
     color: var(--verde);
 }
 
+
 .botao {
-    font-family: "Crakra Petch", sans-serif;
+    font-family: 'Chakra Petch', sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
     display: flex;
@@ -60,7 +61,7 @@ body {
     display: block;
 }
 
-.botao.ativo {
+.botao.ativo{
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--verde);
 }
@@ -70,9 +71,8 @@ body {
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
-
 .aba-conteudo.ativo{
-    display: block;
+    display:block;
 }
 
 .aba-conteudo{
@@ -83,7 +83,6 @@ body {
     font-size: 28px;
     text-align: center;
 }
-
 .aba-conteudo-titulo-secundario{
     text-align: center;
     color: var(--verde);
@@ -91,11 +90,10 @@ body {
 }
 
 .contador{
-    display: flex;
+    display:flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-
 .contador-digito{
     padding: 0 16px;
     text-align: center;
@@ -105,12 +103,14 @@ body {
 .contador-digito-numero{
     font-size: 80px;
     margin: 0;
+
 }
 
 .contador-digito-texto{
     color: var(--verde);
     font-size: 20px;
     margin: 0;
+
 }
 
 @media screen and (min-width: 768px) {
